Potential fix for landscape mode on mobile

--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ p {
   animation: fadein 2s;
 }
 
+@media all and (max-height: 480px) {
+  #app {
+    height: 150vh;
+  }
+}
+
 .app--container {
   background: #fff;
   box-shadow: 0px 2px 6px 2px #555;
